# gpr200-fa2023-owen-stanclift

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment2_sunset/: main.cpp
assignments/assignment2_sunset/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment3_textures/: main.cpp
assignments/assignment3_textures/assets/: charFragmentShader.frag  charVertexShader.vert  fragmentShader.frag  vertexShader.vert
assignments/assignment4_transformations/: main.cpp
assignments/assignment4_transformations/assets/: vertexShader.vert
assignments/assignment5_camera/: main.cpp
assignments/assignment5_camera/assets/: vertexShader.vert
assignments/assignment6_proceduralGeometry/: main.cpp
assignments/assignment7_lighting/: main.cpp
assignments/assignment7_lighting/assets/: defaultLit.frag  defaultLit.vert  unlit.frag  unlit.vert
assignments/finalProject_Fire/: CMakeLists.txt  main.cpp
assignments/finalProject_scene/: CMakeLists.txt  main.cpp
assignments/finalProject_scene/assets/: fireLit.frag  fireLit.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  unLit.frag  unLit.vert
core/am/: texture.cpp  texture.h
core/gs/: Perlin.cpp  Perlin.h  terrain.cpp  terrain.h
core/myLib/: camera.h  procGen.cpp  procGen.h  shader.cpp  shader.h  texture.cpp  texture.h  transformation.h
